apps/hosp_comparison_app/static/hosp_comparison_app/css/stylesheet.css
@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";

body {
    font-family: 'Poppins', sans-serif;
    background: #fafafa;
}
    .wrapper {
        display: flex;
        width: 100%;
    }

/* Sidebar styling */

        #topnav {
            position: fixed;
            width: 100%;
            height: 50px;
            background: rgb(50,50,50);
            color: #fff;
        }
            #topnav ul {
                list-style-type: none;
                width: 470px;
                display: inline-block;
                vertical-align: top;
                padding: 0px 4px;
            }

                #topnav ul li {
                    float: left;
                }

                    #topnav ul li a, #topnav ul li a:hover, #topnav ul li a:focus {
                        color: inherit;
                        text-decoration: none;
                        transition: all 0.5s;
                        text-align: center;
                        display: block;
                        padding: 15px 12px;
                        font-size: 20px;
                    }

                        #topnav ul li a:hover {
                            color: #7386D5;
                            background: #fff;
                        }

            .admin_form {
                width: 42%;
                margin: 10px 0px 0px 0%;
                font-size: 15px;
                float: right;
            }

                .admin_login_input {
                    margin: 0px 5px;
                    padding: 0px 0px 0px 5px;
                    width: 30%;
                    border-radius: 5px;
                    border: 1px solid rgb(100,100,100);
                }

                .admin_submit {
                    width: 15%;
                    border-radius: 5px;
                    box-shadow: none;
                    border: 1px solid rgb(100,100,100);
                    background: rgb(255,255,255);
                    color:rgb(50,50,50);
                }


/* Content styling */

        #content {
            display: inline-block;
            height: 100vh;
            min-width: 75%;
        }

            .page_title {
                text-align: left;
                width: 86%;
                margin: 60px 7% 10px 7%;
                font-size: 60px;
                vertical-align: top;
                display: inline-block;
                color: rgb(50,50,50);
                text-shadow: 2px 2px rgb(200,200,200);
            }

            .page_intro {
                text-align: left;
                width: 42%;
                margin: 10px 0% 10px 7%;
                font-size: 20px;
                vertical-align: top;
                display: inline-block;
                color: rgb(50,50,50);
            }

            .chart_form {
                display: inline-block;
                vertical-align: top;
                width: 40%;
                margin: 10px 7% 10px 2%;
            }

                .input_class {
                    width: 100%;
                    text-align: left;
                    display: block; 
                }

                .select2-results__options {
                    font-size: 22px;
                }

                .select2-selection__rendered {
                    font-size: 22px;
                    line-height: 30px !important;
                }

                .select2-container .select2-selection--single {
                    height: 30px !important;
                    margin: 2px 0px;
                }
            
            
            .graph_container {
                margin: 10px 5% 0% 5%;
                width: 90%;
            }

                .graph_container ul{
                    font-size: 10px;
                    font-style: italic;
                }

            #hospital_map {
                margin: 0% 5% 0% 5%;
                width: 90%;
            }

            .page_about {
                text-align: left;
                width: 86%;
                margin: 10px 7% 10px 7%;
                font-size: 20px;
                vertical-align: top;
                display: inline-block;
                color: rgb(50,50,50);
            }

/* For mobile phones */

@media only screen and (max-width: 850px){
    .page_intro {
        width: 86%;
        margin: 10px 7% 10px 7%;
    }

    .chart_form {
        width: 86%;
        margin: 10px 7% 10px 7%;
    }

    .mobile_hidden {
        display: none;
    }
}

@media only screen and (min-width: 851px){
    .page_intro {
        width: 42%;
        margin: 10px 0% 10px 7%;
    }

    .chart_form {
        width: 40%;
        margin: 10px 7% 10px 2%;
    }
}

